# plain-conversation-crypto

./: .gitignore  README.md  pyproject.toml
benchmarks/: carrier_dense_model.json  carrier_topic_model.json  compression_chat_corpus.json  compression_portfolio.json  gpu_provider_study.json  model_spot_checks.json  neural_smollm135_arithmetic32.json  neural_smollm135_h16.json  neural_smollm360_arithmetic32.json  neural_smollm360_h16.json  reference_comparison.json
docs/: optimization_report.md
models/: README.md
models/gemma3-270m-q4/: carrier-arithmetic32.json  carrier-huffman32.json  carrier-top4.json
models/lfm2.5-350m-q4/: carrier-arithmetic32.json  carrier-huffman32.json
models/qwen3-0.6b-int8/: carrier-arithmetic32.json  carrier-huffman32.json  carrier-top4.json
models/smollm2-135m-int8/: carrier-arithmetic32.json  carrier-arithmetic8.json  carrier-huffman16.json  carrier-huffman8.json
models/smollm2-360m-int8/: carrier-arithmetic32.json  carrier-arithmetic8.json  carrier-huffman16.json  carrier-huffman32.json  carrier-huffman8.json  carrier-top16.json  carrier-top4.json  carrier-top8.json
packs/: chat_dense_model.json  chat_topic_model.json  dense_semantic_pack.json  model_corpus.txt  semantic_demo.json
pcc/: __init__.py  arithmetic.py  benchmark.py  cli.py  codec.py  compression.py  crypto.py  errors.py  framing.py  limits.py  model.py  neural.py  pack.py  v2.py
tests/: test_arithmetic.py  test_pcc.py  test_v2.py
tools/: PACK_AUTHORING.md  benchmark_compression_corpus.py  benchmark_neural.py  download_models.py
