[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plain-conversation-crypto"
version = "0.2.0"
description = "Research prototype for carrying encrypted messages in conversational text"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42",
  "Brotli>=1.1",
  "zstandard>=0.22",
  "numpy>=1.26",
  "tokenizers>=0.20",
  "onnxruntime>=1.20",
  "huggingface-hub>=0.25",
]

[project.scripts]
pcc = "pcc.cli:main"

[project.optional-dependencies]
gpu-windows = ["onnxruntime-directml>=1.20"]
gpu-cuda12 = [
  "onnxruntime-gpu==1.22.0",
  "nvidia-cuda-runtime-cu12==12.8.90",
  "nvidia-cuda-nvrtc-cu12==12.8.93",
  "nvidia-cublas-cu12==12.8.4.1",
  "nvidia-cudnn-cu12==9.8.0.87",
  "nvidia-cufft-cu12==11.3.3.83",
]

[tool.setuptools.packages.find]
include = ["pcc*"]
